--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -66,21 +66,15 @@
 }
 
 .grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+  display: inline;
+  padding: 1rem 0;
 }
 
 .card {
-  margin: 1rem auto;
-  padding: 1.5rem;
-  text-align: left;
+  margin: 0.5rem auto;
+  text-align: center;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   width: 80%;
 }
@@ -99,7 +93,7 @@
 
 .card p {
   margin: 0;
-  font-size: 1.25rem;
+  font-size: 0.75rem;
   line-height: 1.5;
 }
 
@@ -136,4 +130,9 @@
   .textWrap {
     margin: 20px; /* The width is 100%, when the viewport is 800px or smaller */
   }
+}
+
+.appstoreLabel {
+  max-width: 200px;
+  height: auto;
 }
